--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
   </div>
 
-  <div class="c-sidebar-footer">
+  <!-- <div class="c-sidebar-footer">
     <div class="c-social">
       <div class="c-social__title">Social</div>
       <ul class="c-social__list u-lists-reset">
@@ -66,7 +66,7 @@ layout: default
     <div class="c-copyright">
       <p>{{site.time | date: '%Y'}} &copy; {{site.author-name}}</p>
     </div>
-  </div>
+  </div> -->
 </aside> <!-- /.c-sidebar -->
 
 <main class="c-content">
