--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,11 +25,12 @@ layout: default
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
   </div>
 
-  <!-- <div class="c-sidebar-footer">
+  <div class="c-sidebar-footer">
     <div class="c-social">
-      <div class="c-social__title">Social</div>
+      <div class="c-social__title">无限播放APP</div>
       <ul class="c-social__list u-lists-reset">
-        {% if site.social-twitter %}
+        <li class="c-social__item"><a href="https://wwa.lanzous.com/i5NSQlt28je" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
+        <!-- {% if site.social-twitter %}
           <li class="c-social__item"><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
         {% else %}
         {% endif %}
@@ -60,13 +61,13 @@ layout: default
         {% if site.social-linkedin %}
           <li class="c-social__item"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><div data-icon='ei-sc-linkedin' data-size='s'></div></a></li>
         {% else %}
-        {% endif %}
+        {% endif %} -->
       </ul>
     </div>
     <div class="c-copyright">
       <p>{{site.time | date: '%Y'}} &copy; {{site.author-name}}</p>
     </div>
-  </div> -->
+  </div>
 </aside> <!-- /.c-sidebar -->
 
 <main class="c-content">
