--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
     <div class="c-social">
       <div class="c-social__title">无限播放APP</div>
       <ul class="c-social__list u-lists-reset">
-        <li class="c-social__item"><a href="https://wwa.lanzous.com/i5NSQlt28je" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
+        <li class="c-social__item"><a href="https://wwa.lanzous.com/i5NSQlt28je" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div>下载</a></li>
         <!-- {% if site.social-twitter %}
           <li class="c-social__item"><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
         {% else %}
