--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: default
       <span class="c-author__job">{{site.author-job}}</span>
     </div>
     <div class="c-contact-menu">
-      {% if site.author-email %}
-      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Send me</a>
+      {% if site.author-down %}
+      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> 下载</a>
       {% else %}
       {% endif %}
       {% if site.author-twitter %}
