--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,10 @@ layout: default
       <div class="c-author__name">{{site.author-name}}</div>
       <span class="c-author__job">{{site.author-job}}</span>
     </div>
+    <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
     <div class="c-contact-menu">
       {% if site.author-down %}
-      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> 下载</a>
+      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-envelope' data-size='s'></span> 下载</a>
       {% else %}
       {% endif %}
       {% if site.author-twitter %}
@@ -22,14 +23,13 @@ layout: default
       {% else %}
       {% endif %}
     </div>
-    <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
   </div>
 
   <div class="c-sidebar-footer">
     <div class="c-social">
       <div class="c-social__title">无限播放APP</div>
       <ul class="c-social__list u-lists-reset">
-        <li class="c-social__item"><a href="https://wwa.lanzous.com/i5NSQlt28je" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div>下载</a></li>
+        <li class="c-social__item"><a href="{{site.author-down}}" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
         <!-- {% if site.social-twitter %}
           <li class="c-social__item"><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a></li>
         {% else %}
