--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,9 +13,10 @@ layout: default
       <span class="c-author__job">{{site.author-job}}</span>
     </div>
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
+    <p class="c-author__about">{{site.about-author2 | strip_html | truncatewords: 50}}</p>
     <div class="c-contact-menu">
       {% if site.author-down %}
-      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-chevron-down' data-size='s'></span> 下载</a>
+      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-arrow-down' data-size='s'></span> 下载</a>
       {% else %}
       {% endif %}
       {% if site.author-twitter %}
