--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="c-search">
       <div class="c-search__box">
         <label for="js-search-input" class="u-screen-reader-text">Search for Blog</label>
-        <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="Type to search...">
+        <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="输入关键字...">
         <div data-icon='ei-search' data-size='s'></div>
       </div>
       <ul id="js-results-container" class="c-search-results-list"></ul>
@@ -11,9 +11,9 @@
     <div class="c-nav">
       <ul class="c-nav__list u-lists-reset">
         <li class="c-nav__item is-active">
-          <div data-icon='ei-pencil' data-size='s'></div> Posts</li>
+          <div data-icon='ei-pencil' data-size='s'></div> 发布</li>
         <li class="c-nav__item">
-          <div data-icon='ei-star' data-size='s'></div> Categories</li>
+          <div data-icon='ei-star' data-size='s'></div> 类别</li>
       </ul>
     </div>
   </div>
