--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: home
         <div class="c-search u-full-width">
           <div class="c-search__box">
             <label for="js-search-input" class="u-screen-reader-text">Search for Blog</label>
-            <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="Type to search...">
+            <input type="text" id="js-search-input" class="c-search__text" autocomplete="off" placeholder="输入关键字...">
             <div data-icon='ei-search' data-size='s'></div>
           </div>
           <ul id="js-results-container" class="c-search-results-list"></ul>
