--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,11 @@ layout: default
       {% else %}
       {% endif %}
     </div>
+    <div class="c-author__down__Qr">
+      <a href="{{site.author-down}}">
+        <img src="{{site.baseurl}}/images/download.png" alt="扫描二维码下载">
+      </a>
+    </div>
   </div>
 
   <div class="c-sidebar-footer">
