--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
     </div>
     <div class="c-author__down__Qr">
       <a href="{{site.author-down}}">
-        <img src="{{site.baseurl}}/images/download.png" alt="扫描二维码下载">
+        <img src="/images/download.png" alt="扫描二维码下载">
       </a>
     </div>
   </div>
