--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
       {% endif %}
     </div>
     <div class="c-author__down__Qr">
-      <a href="{{site.author-down}}">
+      <a href="{{site.author-down}}" target="_blank">
         <img src="/images/download.png" alt="扫描二维码下载">
       </a>
     </div>
