--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,11 @@ layout: default
     <p class="c-author__about">{{site.about-author2 | strip_html | truncatewords: 50}}</p>
     <div class="c-contact-menu">
       {% if site.author-down %}
-      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-arrow-down' data-size='l'></span> 下载</a>
+      <a href="{{site.author-down}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-arrow-down' data-size='l'></span> 下载地址1</a>
+      {% else %}
+      {% endif %}
+      {% if site.author-down-two %}
+      <a href="{{site.author-down-two}}" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow" target="_blank"><span data-icon='ei-arrow-down' data-size='l'></span> 下载地址2</a>
       {% else %}
       {% endif %}
       {% if site.author-twitter %}
